# zh-learn

./: .gitignore  LICENSE  README.md  bla.txt  common-phrases.py  cut.py  normalize_audio.py  requirements.txt  segment.py  subtitles.py  summary.py  words.py
anki-pleco-importer-python/: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  FORVO_ENHANCEMENT_GUIDE.md  GEMINI.md  GOOGLE_DRIVE_AUTH.md  PLAN.md  README.md  TODO.md  audio-config.json  audio_config.example.json  benchmark_hanzipy.py  chinese_key_phrases.py  decomposition_examples.html  feature-characters-plan.md  ocr_processor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test-secret.txt  test_audio_selection.py  test_chinesepod_selenium.py
anki-pleco-importer-python/anki-template/: FONT_COMPARISON.md  FONT_GUIDE.md  FONT_PREVIEW.html  README-auto-rotation.md  README.md  README_FONTS.md  auto-rotating-themes.css  auto-rotation-preview.html  back-template-with-rotation.html  back-template.html  binary-tree-preview.html  canvas-tree-preview.html  compact-meaning-tree-preview.html  component-preview.html  creative-themes-preview.html  cs-tree-preview.html  d3-tree-preview.html  download_fonts.py  flash-txt-previews.html  front-template-with-rotation.html  front-template.html  install_fonts.py  meaning-tree-preview.html  preview.html  setup-guide.md  single-character-previews.html  styling-with-rotation.css  styling.css  test.html  theme-rotator.js  themes-preview-fixed.html  themes-preview.html  tree-structure-preview.html
anki-pleco-importer-python/features/: character_decomposition.feature  character_definition_cleanup.feature  cli_interface.feature  complex_cases.feature  environment.py  example_parsing.feature  google_drive_download.feature  interactive_audio_selection.feature  (+5 more)
(+660 files in other folders)
