[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-pleco-importer"
version = "0.1.0"
description = "Convert Pleco flashcard exports to Anki-compatible format for Chinese learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "hanzipy>=1.0.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "behave>=1.2.6",
    "pre-commit>=2.20.0",
]
audio = [
    "playsound3>=3.0.0",
]

[project.scripts]
anki-pleco-importer = "anki_pleco_importer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E203"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true
